Updated to add arrow customization

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script type="text/javascript" src="javascripts/angular.min.js"></script>
     <script type="text/javascript" src="javascripts/lodash.min.js"></script>
     <script type="text/javascript" src="javascripts/moment.min.js"></script>
-    <script type="text/javascript" src="multipleDatePickerX.js"></script>
+    <script type="text/javascript" src="dist/multipleDatePickerX.js"></script>
 <!--    <script type="text/javascript" src="dist/multipleDatePickerX.min.js"></script>-->
     <script type="text/javascript" src="javascripts/app.js"></script>
     <title>MultipleDatePickerX by Xal3ph from (arca-computing)</title>
