--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
-    <link rel="stylesheet" type="text/css" href="dist/multiple-date-picker-x.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="./dist/multiple-date-picker-x.css" media="screen" />
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <script type="text/javascript" src="javascripts/angular.min.js"></script>
     <script type="text/javascript" src="javascripts/lodash.min.js"></script>
     <script type="text/javascript" src="javascripts/moment.min.js"></script>
-    <script type="text/javascript" src="multipleDatePickerX.js"></script>
+    <script type="text/javascript" src="./dist/multipleDatePickerX.min.js"></script>
     <!-- <script type="text/javascript" src="dist/multipleDatePickerX.js"></script> -->
 <!--    <script type="text/javascript" src="dist/multipleDatePickerX.min.js"></script>-->
     <script type="text/javascript" src="javascripts/app.js"></script>
